# rs-to-readme

./: CLAUDE.md  Cargo.toml  LICENSE  PORTING.md  README-Arabic.md  README-Chinese.md  README-English.md  README-France.md  README-Germany.md  README-Italy.md  README-Japan.md  README-Korea.md  README-Russia.md  README-Spain.md  README.banner.md  README.md
src/: cargo_meta.rs  doc_extract.rs  html_render.rs  lib.rs  main.rs  render.rs
